--- a/KimmerPractice2/DotnetCorePractice/DotnetCorePractice.csproj
+++ b/KimmerPractice2/DotnetCorePractice/DotnetCorePractice.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Class1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DotnetStandard\DotnetStandardPractice.csproj" />
   </ItemGroup>
 
