--- a/KimmerPractice2/WebApplicationWebAPI/WebApplicationWebAPI.csproj
+++ b/KimmerPractice2/WebApplicationWebAPI/WebApplicationWebAPI.csproj
@@ -4,11 +4,17 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e679dcca-2962-4451-8098-2f24b320cf44</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EFCorePractice\EFCorePractice.csproj" />
   </ItemGroup>
 
 </Project>
